objects/WorkOrder.object
<CustomObject>
    <fields>
        <fullName>FSL__IsFillInCandidate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Fill In Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Prevent_Geocoding_For_Chatter_Actions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prevent Geocoding For Chatter Actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Scheduling_Priority__c</fullName>
        <formula>CASE(TEXT(Priority), &apos;Critical&apos; , 1 ,&apos;High&apos; ,2,&apos;Medium&apos; ,3 , &apos;Low&apos;, 4, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduling Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__VisitingHours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visiting Hours</label>
        <referenceTo>OperatingHours</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>afib__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AFIB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>atrial_tachycadria__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Atrial Tachycardia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>brady_tachy_syndrome__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Brady/Tachy Syndrome</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>chf__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CHF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>following_physician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>following physician CONTACT record assigned by SFDC</description>
        <label>Following Physician</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Physician</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Implant Procedures (Following Physician)</relationshipLabel>
        <relationshipName>Implants_Procedures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>implanting_physician__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>implanting physician CONTACT record assigned by SFDC
removed Implanting Physician: Account: Account ID = Work Order: Account ID filter criteria</description>
        <inlineHelpText>implanting physician CONTACT record assigned by SFDC</inlineHelpText>
        <label>Implanting Physician</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Physician</value>
            </filterItems>
            <filterItems>
                <field>Contact.Account.status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Implant Procedures (Implanting Physician)</relationshipLabel>
        <relationshipName>Orders_MDRFs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>medical_record_no__c</fullName>
        <description>Unique identifier issued to the patient by the hospital</description>
        <label>Medical Record No.</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mi__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>no_rep_present_at_implant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system must allow the user entering the MDRF to indicate that no BIOTRONIK representative was present at the implant.</description>
        <label>No Rep present at implant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npi__c</fullName>
        <description>Pulls the information to the MDRF from the &apos;NPI&apos; field on the related Implanting Physician (Contact) Record</description>
        <formula>implanting_physician__r.npi__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>one_hb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>1° HB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>order__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Implant Procedures</relationshipLabel>
        <relationshipName>Implants_Procedures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ous_patient__c</fullName>
        <description>Auto-displayed on the MDRF when the related Patient marked OUS</description>
        <formula>patient__r.ous_patient__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OUS Patient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>patient__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Link to Patient record</description>
        <inlineHelpText>Link to Patient record</inlineHelpText>
        <label>Patient</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.Name</field>
                <operation>equals</operation>
                <value>Patient</value>
            </filterItems>
            <filterItems>
                <field>Contact.Status__c</field>
                <operation>notEqual</operation>
                <value>Deceased</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Implant Procedures (Patient)</relationshipLabel>
        <relationshipName>Orders_MDRFs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>referring_physician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Physician who referred the patient</description>
        <inlineHelpText>Physician who referred the patient</inlineHelpText>
        <label>Referring Physician</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Physician</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Implant Procedures (Referring Physician)</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rep_at_implant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifier for the BIOTRONIK representative (Sales Rep, FCS) CONTACT record in attendance at the implant</description>
        <inlineHelpText>Identifier for the BIOTRONIK representative (Sales Rep, FCS) CONTACT record in attendance at the implant</inlineHelpText>
        <label>Rep at implant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Orders_MDRFs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rep_for_credit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifier for sales rep who will receive credit for the sale.</description>
        <inlineHelpText>Identifier for sales rep who will receive credit for the sale.</inlineHelpText>
        <label>Rep for Credit</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Orders_MDRFs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sap_company_code__c</fullName>
        <description>All org units in SAP are uniquely identified with a company name and a company code with 4 digits, see API-Names.</description>
        <label>Company Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Company_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>scd__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SCD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sick_sinus_syndrome__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sick Sinus Syndrome</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sinus_arrest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sinus Arrest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sinus_bradycardia__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sinus Bradycardia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>three_hb_chb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>3° HB/CHB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>two_hb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2° HB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vf__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VT</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All_Implant_Procedures</fullName>
        <columns>Name</columns>
        <columns>Account</columns>
        <columns>Subject</columns>
        <columns>CreatedDate</columns>
        <columns>Status</columns>
        <filterScope>Everything</filterScope>
        <label>All Implant Procedures</label>
        <sharedTo>
            <role>BINC_Advanced_Product_Support</role>
            <role>BINC_Answering_Services</role>
            <role>BINC_Clinical_Studies</role>
            <role>BINC_Compliance</role>
            <role>BINC_Contracts</role>
            <role>BINC_Customer_Solutions</role>
            <role>BINC_Education</role>
            <role>BINC_Events</role>
            <role>BINC_Finance</role>
            <role>BINC_Inventory</role>
            <role>BINC_Legal</role>
            <role>BINC_Marketing</role>
            <role>BINC_Medical_Device_Reporting</role>
            <role>BINC_Regulatory</role>
            <role>BINC_Reporting</role>
            <role>BINC_Sales_Operations</role>
            <role>BIOTRONIK_Headquarter</role>
            <role>US_National_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_WorkOrderst</fullName>
        <columns>Name</columns>
        <columns>Subject</columns>
        <columns>Account</columns>
        <columns>Priority</columns>
        <columns>Status</columns>
        <columns>order__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Implant Procedures</label>
    </listViews>
    <listViews>
        <fullName>My_WorkOrders</fullName>
        <filterScope>Mine</filterScope>
        <label>My Work Orders</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Field_update_during_status_changes</fullName>
        <active>true</active>
        <description>Only CAS and CS are allowd to make certain field updates during status changes // SAFBIO-914</description>
        <errorConditionFormula>AND(CASE($UserRole.DeveloperName, 
&quot;BINC_Customer_Solutions&quot;,1, 
&quot;BINC_Sales_Operations&quot;,1, 0 ) = 0
,NOT(ISPICKVAL(Status , &quot;Not Submitted&quot;))
,
OR(ISCHANGED(rep_for_credit__c)
,ISCHANGED(AccountId)))</errorConditionFormula>
        <errorMessage>Your role dose not allow these changes in this status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_status_change_away_from_transmitted</fullName>
        <active>true</active>
        <errorConditionFormula>CASE(Status, &apos;Transmitted&apos;, 0, 1) = 1 &amp;&amp;  CASE(PRIORVALUE(Status), &apos;Transmitted&apos;, 0, 1) = 0 &amp;&amp; CASE( order__r.Status , &apos;Canceled&apos;, 0, 1) = 1</errorConditionFormula>
        <errorMessage>It is not allowed to change the status away from &apos;Transmitted&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rep_at_implant_empty_when_no_rep_present</fullName>
        <active>true</active>
        <description>If &quot;No Rep present at implant&quot; is checked, the &apos;Rep at Implant&apos; must be empty and vice versa.</description>
        <errorConditionFormula>(ISBLANK(rep_at_implant__c) &amp;&amp; (no_rep_present_at_implant__c = FALSE)) || 
(NOT(ISBLANK(rep_at_implant__c)) &amp;&amp; (no_rep_present_at_implant__c = TRUE))</errorConditionFormula>
        <errorDisplayField>rep_at_implant__c</errorDisplayField>
        <errorMessage>Select either &quot;Rep at Implant&quot; or &quot;No Rep present at implant&quot;</errorMessage>
    </validationRules>
</CustomObject>